syntax = "proto3";
package org.crowdnotifier.android.sdk.model;

message QRCodeTrace {
  uint32 version = 1;
  bytes qrCodePayload = 2;
  bytes masterSecretKeyLocation = 3;
  bytes cipherTextHealthAuthority = 4;
}

message PreTrace {
  bytes identity = 1;
  bytes partialSecretKeyForIdentityOfLocation = 2;
  bytes cipherTextHealthAuthority = 3;
  string message = 4;
  bytes notificationKey = 5;
}

message TraceProof {
  bytes masterPublicKey = 1;
  bytes nonce1 = 2;
  bytes nonce2 = 3;
}

message PreTraceWithProof {
  PreTrace preTrace = 1;
  TraceProof proof = 2;
  bytes qrCodePayload = 3;
  int64 startTime = 4;
  int64 endTime = 5;
  int32 counter = 6;
}

message Trace {
  bytes identity = 1;
  bytes secretKeyForIdentity = 2;
  int64 startTime = 3;
  int64 endTime = 4;
  bytes nonce = 5;
  bytes encryptedMessage = 6;
}

