syntax = "proto3";
package org.crowdnotifier.android.sdk.model.v2;

message QRCodeEntry {
  uint32 version = 1;
  QRCodeContent data = 2;
  bytes masterPublicKey = 3;
  EntryProof entryProof = 4;
}

message QRCodeContent {
  string name = 1;
  string location = 2;
  string room = 3;
  enum VenueType {
    OTHER = 0;
    MEETING_ROOM = 1;
    CAFETERIA = 2;
    PRIVATE_EVENT = 3;
    CANTEEN = 4;
    LIBRARY = 5;
    LECTURE_ROOM = 6;
    SHOP = 7;
    GYM = 8;
    KITCHEN_AREA = 9;
    OFFICE_SPACE = 10;
  }
  VenueType venueType = 4;
  bytes notificationKey = 5;
  uint64 validFrom = 6;
  uint64 validTo = 7;
}

message EntryProof {
  bytes nonce1 = 1;
  bytes nonce2 = 2;
}

message QRCodeTraceV2 {
  uint32 version = 1;
  MasterTraceV2 masterTraceRecord = 2;
  bytes notificationKey = 3;
}

message MasterTraceV2 {
  bytes masterPublicKey = 1;
  bytes masterSecretKeyLocation = 2;
  bytes info = 3;
  bytes nonce1 = 4;
  bytes nonce2 = 5;
  bytes cipherTextHealthAuthority = 6;
}

message PreTraceV2 {
  bytes identity = 1;
  bytes partialSecretKeyForIdentityOfLocation = 2;
  bytes cipherTextHealthAuthority = 3;
  string message = 4;
  bytes notificationKey = 5;
}

message TraceProofV2 {
  bytes masterPublicKey = 1;
  bytes nonce1 = 2;
  bytes nonce2 = 3;
}

message PreTraceWithProofV2 {
  PreTraceV2 preTrace = 1;
  TraceProofV2 proof = 2;
  bytes info = 3;
  int64 startTime = 4;
  int64 endTime = 5;
  int32 counter = 6;
}

message TraceV2 {
  bytes identity = 1;
  bytes secretKeyForIdentity = 2;
  int64 startTime = 3;
  int64 endTime = 4;
  bytes nonce = 5;
  bytes encryptedMessage = 6;
}


